Fix spacing issues

--- a/index.css
+++ b/index.css
@@ -24,29 +24,32 @@ body {
     align-items: center;
 }
 
-.logo {
-    margin-top: 15px;
-    font-weight: 900;
-    font-family: Helvetica;
-    text-align: center;
+.logo img{
+    margin-top: 25px;
+    border-radius: 80px;
 }
 
-.header-links {
-    display: flex;
-    gap: 32px;
-    padding-bottom: 100px;
+.header-links {    
+    font-size: 32px;
     a {
         color: white;
         text-decoration: none;
-        margin-right: 40px;
+        margin-right: 80px;
     }
 }
 
 .header-text {
-    max-width: 50%;
+    max-width: 40%;
+    flex: 1 1 auto;
     text-align: left;
     font-weight: bold;
-    flex: 1 2 auto;
+    flex: 1 1 auto;
+    h1 {
+        font-size: 64px;
+    }
+    p {
+        font-size: 32px;
+    }    
 }
 .header-bottom {
     display: flex;
@@ -55,6 +58,7 @@ body {
 }
 
 .header-image {
+    min-width: 300px;
     margin: 20px 40px;
     flex: 1 1 auto;
 }
@@ -96,7 +100,7 @@ body {
     text-align: center;
     justify-content: space-around;
     gap: 18px;
-    padding: 80px;
+    padding: 200px 80px 200px 80px;
 }
 
 .body-one-image {
@@ -123,7 +127,7 @@ body {
     border-bottom: 4px black solid;
     flex-direction: column;
     align-items: center;
-    padding: 50px;
+    padding: 250px;
     .testimonial {
         width: 50%;
         font-size: 42px;
@@ -141,6 +145,7 @@ body {
     background-color: rgb(170, 166, 166);
     color: black;
     display: flex;
+    justify-content: center;
     padding: 100px;
     .body-three-container {
         display: flex;
